[FIX] hr_expense: fix validation for company and employee expense
journals

Previously, an error would appear for both company and employee expenses
if the expense journal was not configured.

The new behavior is as follows:
1. For company-paid expenses, an error will only be shown if the bank
journal is not filled in.
2. For employee-paid expenses, an error will be shown if the expense
journal is not filled in.

This change ensures that journal validation aligns with the type of
expense being processed.

closes odoo/odoo#185054

Signed-off-by: Olivier Colson (oco) <oco@odoo.com>

--- a/addons/hr_expense/i18n/hr_expense.pot
+++ b/addons/hr_expense/i18n/hr_expense.pot
@@ -1771,6 +1771,13 @@ msgstr ""
 #. odoo-python
 #: code:addons/hr_expense/models/hr_expense.py:0
 #, python-format
+msgid "Please specify a bank journal in order to generate accounting entries."
+msgstr ""
+
+#. module: hr_expense
+#. odoo-python
+#: code:addons/hr_expense/models/hr_expense.py:0
+#, python-format
 msgid "Specify expense journal to generate accounting entries."
 msgstr ""
 
